--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
 
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <!-- Logotipo -->
         <div class="navbar-logo-container">
-            <img src="img/logocodards.png" alt="Logo" class="navbar-logo">
+            <img src="logocodards.png" alt="Logo" class="navbar-logo">
         </div>
         <div>
         <a class="navbar-brand" href="#">Codar Digital Solutions</a>
@@ -42,21 +41,19 @@
     </div>
 </nav>
 
-<!-- Banner -->
 <section id="banner" class="banner">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4">
                 <!-- Imagem de perfil circular -->
-                <img src="img/perfil.jpg" alt="Foto" class="perfil-img">
+                <img src="perfil.jpg" alt="Foto" class="perfil-img">
             </div>
             <div class="col-md-8">
                 <!-- Título e descrição do banner -->
                 <h1>George Corrêa</h1>
                 <p>Desenvolvedor Full Stack<br> Especialista em (RPA)</p>
                 <p>Olá, sou um visionário Desenvolvedor Full Stack que prospera na criação de soluções tecnológicas inovadoras. Minha trajetória é impulsionada por uma paixão incansável por transformar desafios complexos em conquistas notáveis. Com um profundo domínio em linguagens de programação, incluindo Java, C#, .NET e Python, tenho uma sólida reputação em entregar resultados excepcionais.</p>
-                
-                <!-- Badges para redes sociais -->
+
                 <div class="redes-sociais">
                     <a href="https://www.linkedin.com/in/george-augusto-corrêa-35213a22b/">
                         <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white">
@@ -72,9 +69,6 @@
         </div>
     </div>
 </section>
-
-
-<!-- Portfólio -->
 <section id="portfolio" class="portfolio">
     <div class="container text-center">
         <h2>Meu Portfólio</h2>
