--- a/contato.html
+++ b/contato.html
@@ -97,7 +97,7 @@ button:disabled {
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <div class="navbar-logo-container">
-                <img src="img/logocodards.png" alt="Logo" class="navbar-logo">
+                <img src="logocodards.png" alt="Logo" class="navbar-logo">
             </div>
             <div>
             <a class="navbar-brand" href="#">Codar Digital Solutions</a>
