--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <!-- Logotipo -->
+
         <div class="navbar-logo-container">
             <img src="logocodards.png" alt="Logo" class="navbar-logo">
         </div>
@@ -45,11 +45,11 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4">
-                <!-- Imagem de perfil circular -->
+
                 <img src="perfil.jpg" alt="Foto" class="perfil-img">
             </div>
             <div class="col-md-8">
-                <!-- Título e descrição do banner -->
+
                 <h1>George Corrêa</h1>
                 <p>Desenvolvedor Full Stack<br> Especialista em (RPA)</p>
                 <p>Olá, sou um visionário Desenvolvedor Full Stack que prospera na criação de soluções tecnológicas inovadoras. Minha trajetória é impulsionada por uma paixão incansável por transformar desafios complexos em conquistas notáveis. Com um profundo domínio em linguagens de programação, incluindo Java, C#, .NET e Python, tenho uma sólida reputação em entregar resultados excepcionais.</p>
@@ -76,10 +76,9 @@
             <div class="col-lg-8 offset-lg-2">
                 <div id="project-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
-                        <!-- Projeto 1 -->
                         <div class="carousel-item active">
                             <div class="d-flex align-items-end">
-                                <img src="Img/RPA.png" class="d-block w-100" alt="Projeto">
+                                <img src="RPA.png" class="d-block w-100" alt="Projeto">
                                 <div class="carousel-caption">
                                     <h5>Processo de Automação Robótica:</h5>
                                     <p>O Processo de Automação Robótica (RPA, do inglês Robotic Process Automation) é uma abordagem que utiliza software para automatizar tarefas repetitivas e manuais em sistemas de TI, simulando ações humanas em aplicativos e sistemas. Aqui está uma apresentação de como o processo de RPA funciona e como ele é desenvolvido e adotado.</p>
@@ -88,10 +87,6 @@
                             </div>
                         </div>
 
-                        
-
-                        
-                    </div>
                     <a class="carousel-control-prev" href="#project-carousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Anterior</span>
