--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         </div>
     </div>
 </nav>
-
-<section id="banner" class="banner">
+<section id="banner" class="banner" style="background-image: url('banner-background.png'); background-size: cover; background-position: center; color: #ffffff; padding: 100px 0;">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4">
