--- a/contato.html
+++ b/contato.html
@@ -117,10 +117,10 @@ button:disabled {
             </div>            
         </div>
     </nav>
-    <section id="banner" class="banner">
+<section id="banner" class="banner" style="background-image: url('banner-background.png'); background-size: cover; background-position: center; color: #ffffff; padding: 100px 0;">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-8">
+                <div class="col-md-4">
                     <section id="contato" class="contato">
                         <div class="container text-center">
                             <h2>Entre em Contato</h2>
