--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="contato.html">Contato</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Carta-Recomendacao.html">Preview</a>
+                    <a class="nav-link" href="https://issuu.com/codardigitalsolutions/docs/carta">Preview</a>
             </ul>
         </div>
     </div>
